# SimpleDatabase

./: .gitignore  ChangeLog.md  Issues.md  LICENSE  Plans.md  README.md  SimpleDatabase.cabal
Data/SimpleDatabase/: Pure.hs  PureT.hs  Types.hs
Data/SimpleDatabase/Pure/: Types.hs
Data/SimpleDatabase/PureT/: Types.hs
DevLog/: STM-2017-01-18.md
Memo/: Problem with ByteString, Text and Unicode when using `b.md
src/Data/SimpleDatabase/: Pure.hs
