name:                   SimpleDatabase
version:                0.0.3.1
synopsis:               Just a simple database
-- description:            
homepage:               dev.quietjoon.net/projects/SimpleDatabase
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer@quietjoon.net
-- copyright:              
category:               Database
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Data.SimpleDatabase.Pure
                      , Data.SimpleDatabase.Pure.Types
                      , Data.SimpleDatabase.PureT
                      , Data.SimpleDatabase.PureT.Types
                      , Data.SimpleDatabase.Types
  -- other-modules:        
  -- other-extensions:     
  build-depends:        base >=4.9
                      , bytestring
                      , text
                      , containers
                      , bytestring-trie
                      , unordered-containers
  -- hs-source-dirs:       
  default-language:     Haskell2010
