name:                   SimpleDatabase
version:                0.0.3.1
synopsis:               Just a simple database
homepage:               http://dev.quietjoon.net/projects/SimpleDatabase.html
bug-reports:            https://github.com/QuietJoon/SimpleDatabase/issues
license:                BSD3
license-file:           LICENSE
author:                 YongJoon Joe
maintainer:             developer@quietjoon.net
copyright:              2015-2017 YongJoon Joe
category:               Database
build-type:             Simple
extra-source-files:     ChangeLog.md README.md
cabal-version:          >=1.10

library
  exposed-modules:      Data.SimpleDatabase.Pure
                      , Data.SimpleDatabase.Pure.Types
                      , Data.SimpleDatabase.PureT
                      , Data.SimpleDatabase.PureT.Types
                      , Data.SimpleDatabase.Types
  build-depends:        base >=4.9
                      , bytestring
                      , text
                      , containers
                      , bytestring-trie
                      , unordered-containers
  hs-source-dirs:       src
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/QuietJoon/SimpleDatabase.git
